tests/typing/bad/testfile-redef-6.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int f(int x, bool x) {}
int main() {}
